Added some example views, and generally cleaned up some code

--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -7,7 +7,7 @@
 <div class="page-header">
     <h1>Login</h1>
 </div>
-<div class="col-md-4">
+<div class="col-md-offset-4 col-md-4">
     {{ wtf.quick_form(form) }}
     <br>
     <p>Forgot your password? <a href="{{ url_for('auth.password_reset_request') }}">Click here to reset it</a>.</p>
